apps/production/website/ingressConfig.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: website
  namespace: website
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vandelocht.uk`) && PathPrefix(`/calc`)
      kind: Rule
      services:
        - name: website-frontend
          port: 3000
      middlewares:
        - name: svc-website-headers
        # - name: website-calc-stripprefix
    - match: Host(`vandelocht.uk`)
      kind: Rule
      services:
        - name: website-nginx
          port: 80
      middlewares:
        - name: svc-website-headers
  tls:
    secretName: website-vandelocht-uk-production-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: svc-website-headers
  namespace: website
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: website-calc-stripprefix
  namespace: website
spec:
  stripPrefix:
    prefixes:
      - /calc
